--- a/app/views/partials/profile.html
+++ b/app/views/partials/profile.html
@@ -44,8 +44,7 @@
 	</div>
 	<div class="profile__elements">
 		<div class="profile__element">
-			<!-- Portafolio -->
-			{% include '../partials/works.html' %}
+			<section class="works" data-columns></section>
 		</div>
 		<div class="profile__element">
 			<!-- Tienda -->
