--- a/app/views/user/index.html
+++ b/app/views/user/index.html
@@ -39,6 +39,7 @@
 
 	<script type="text/javascript" src="/js/vendor/jquery.min.js"></script>
 	<script type="text/javascript" src="/js/vendor/underscore-min.js"></script>
+	<script type="text/javascript" src="/js/vendor/salvattore.js"></script>
 	<script type="text/javascript" src="js/profile.js"></script>
 
 {% endblock %}
