--- a/public/stylus/profile.styl
+++ b/public/stylus/profile.styl
@@ -3,7 +3,15 @@
 *------------------------------------*/
 @import 'base.styl'
 
+/*------------------------------------*
+	$INT TO STRING
+*------------------------------------*/
+str(x)
+	return '' + unit(x, '')
+	
 @import 'elements/buttons.styl'
+
+@import 'objects/works.styl'
 
 
 .profile
