--- a/app/views/partials/profile.html
+++ b/app/views/partials/profile.html
@@ -50,8 +50,14 @@
 			<!-- Tienda -->
 			{% include '../partials/products.html' %}
 		</div>
-		<div class="profile__element">Likes</div>
-		<div class="profile__element">Seguidores</div>
-		<div class="profile__element">Siguiendo</div>
+		<div class="profile__element"></div>
+		<div class="profile__element"></div>
+		<div class="profile__element"></div>
+		<div class="profile__element">
+			<section class="users"></section>
+		</div>
+		<div class="profile__element">
+			<section class="users"></section>
+		</div>
 	</div>
 </section>
