--- a/public/stylus/profile.styl
+++ b/public/stylus/profile.styl
@@ -12,6 +12,8 @@ str(x)
 @import 'elements/buttons.styl'
 
 @import 'objects/works.styl'
+@import 'objects/products.styl'
+@import 'objects/users.styl'
 
 
 .profile
