--- a/app/views/user/index.html
+++ b/app/views/user/index.html
@@ -18,6 +18,84 @@
 		</article>
 	</script>
 
+	<script type="text/template" id="product-template">
+		<div class="product-wrapper">
+			<article class="product">
+				<a class="product-image" href="<%= url %>">
+					<img src="<%= photo %>">
+				</a>
+				<div class="product-title">
+					<div class="title"><%= name %></div>
+				</div>
+				<div class="product-info">
+					<div class="price">s./<%= price %></div>
+					<div class="like">
+						<span class="button-like <% if (liked) { %>active<% } %>"> <i class="fa fa-heart"></i><i class="fa fa-heart-o"></i> <span><%= likes %></span> </span>
+					</div>
+					<div class="wish-list">
+						<span class="button-wish-list"> <i class="fa fa-square-o"></i> 500 </span>
+					</div>
+				</div>
+			</article>
+		</div>
+	</script>
+
+	<script type="text/template" id="user-template">
+	    <div class="user-wrapper">
+	        <article class="user">
+	            <a class="user-header" href="<%= url %>">
+	                <div class="avatar">
+	                    <% if (photo) { %>
+	                        <img src="<%= photo %>">
+	                    <% } else { %>
+	                        <img src="http://www.furcontest.com/imagenes/default.png">
+	                    <% } %>
+	                </div>
+	                <div class="info">
+	                    <p class="high-text" data-size='small'><%= firstname %></p>
+	                    <p class="skinny-text" data-color='light' data-size='small'><i class="fa fa-map-marker"></i> Lima, Peru</p>
+	                </div>
+	            </a>
+	            <div class="user-works">
+	                <% _.each(Works, function(work) { %>
+	                	<a class="work" href="<%= work.url %>" style="background-image: url('<%= work.photo %>');"></a>
+	                <% }); %>
+
+	                <% if (Works.length < 6) { %>
+	                <div class="work" style="background: #ccc; border: 1px solid white;"></div>
+	                <% } %>
+	                <% if (Works.length < 5) { %>
+	                <div class="work" style="background: #ccc; border: 1px solid white;"></div>
+	                <% } %>
+	                <% if (Works.length < 4) { %>
+	                <div class="work" style="background: #ccc; border: 1px solid white;"></div>
+	                <% } %>
+	                <% if (Works.length < 3) { %>
+	                <div class="work" style="background: #ccc; border: 1px solid white;"></div>
+	                <% } %>
+	                <% if (Works.length < 2) { %>
+	                <div class="work" style="background: #ccc; border: 1px solid white;"></div>
+	                <% } %>
+	                <% if (Works.length < 1) { %>
+	                <div class="work" style="background: #ccc; border: 1px solid white;"></div>
+	                <% } %>
+	            </div>
+	            <div class="user-follow">
+	                <% if (following) { %>
+	                <button class="button-liner disabled" data-following="true" data-size='small'>
+	                    <% } else { %>
+	                    <button class="button-liner" data-following="false" data-size='small'>
+	                        <% } %>
+	                        <span class="button-liner__action folllow">Seguir</span>
+	                        <span class="button-liner__action following"><i class="fa fa-check"></i> Siguiendo</span>
+	                        <span class="button-liner__action cancel"><i class="fa fa-times-circle"></i> Cancelar</span>
+	                        <span class="button-liner__number"><%= numOfFollowers %></span>
+	                    </button>
+	            </div>
+	        </article>
+	    </div>
+	</script>
+
 	<script>
 
 		var data = {{ data|json|safe }};
