profile follow implementation

--- a/app/views/user/index.html
+++ b/app/views/user/index.html
@@ -118,6 +118,9 @@
 	<script type="text/javascript" src="/js/vendor/jquery.min.js"></script>
 	<script type="text/javascript" src="/js/vendor/underscore-min.js"></script>
 	<script type="text/javascript" src="/js/vendor/salvattore.js"></script>
+	
+	<script type="text/javascript" src="js/lib/user.js"></script>
+	
 	<script type="text/javascript" src="js/profile.js"></script>
 
 {% endblock %}
