--- a/app/views/partials/auth.html
+++ b/app/views/partials/auth.html
@@ -53,7 +53,7 @@
 				<div class="g-recaptcha" data-sitekey="6LcbDwcTAAAAAIexPkpMRGp4fTveLvMzll_XPH3Q"></div>
 				
 				<div class="question">
-					<input name="isArtist" type="checkbox" id="isArtist">
+					<input name="isArtist" type="checkbox" value="true" id="isArtist">
 					<label for="isArtist" class="medium-text">¿Eres Artista profesional?</label>
 				</div>
 
