instance products and users in profile

--- a/app/views/partials/profile.html
+++ b/app/views/partials/profile.html
@@ -45,19 +45,26 @@
 	<div class="profile__elements">
 		<div class="profile__element">
 			<section class="works" data-columns></section>
+			<div class="loading"><i class="fa fa-spinner"></i></div>
+			<div class="empty">holi!</div>
 		</div>
 		<div class="profile__element">
-			<!-- Tienda -->
-			{% include '../partials/products.html' %}
+			<section class="products"></section>
+			<div class="loading"><i class="fa fa-spinner"></i></div>
+			<div class="empty">holi!</div>
 		</div>
 		<div class="profile__element"></div>
 		<div class="profile__element"></div>
 		<div class="profile__element"></div>
 		<div class="profile__element">
 			<section class="users"></section>
+			<div class="loading"><i class="fa fa-spinner"></i></div>
+			<div class="empty">holi!</div>
 		</div>
 		<div class="profile__element">
 			<section class="users"></section>
+			<div class="loading"><i class="fa fa-spinner"></i></div>
+			<div class="empty">holi!</div>
 		</div>
 	</div>
 </section>
