--- a/app/views/user/index.html
+++ b/app/views/user/index.html
@@ -120,6 +120,7 @@
 	<script type="text/javascript" src="/js/vendor/salvattore.js"></script>
 	
 	<script type="text/javascript" src="js/lib/user.js"></script>
+	<script type="text/javascript" src="js/lib/product.js"></script>
 	
 	<script type="text/javascript" src="js/profile.js"></script>
 
