--- a/public/css/profile.css
+++ b/public/css/profile.css
@@ -1243,6 +1243,8 @@ body {
 .profile__elements {
   background: #fff;
   border-top: solid 1px #ddd;
+  min-height: 200px;
+  overflow: hidden;
 }
 .profile__element {
   display: none;
@@ -1265,6 +1267,13 @@ body {
 }
 .empty {
   display: none;
+  text-align: center;
+  color: #aaa;
+  margin: 3rem 1rem;
+  font-family: 'Raleway';
+  font-family: 'Roboto Condensed';
+  text-transform: uppercase;
+  font-size: 1.5rem;
 }
 @media (min-width: 590px) {
   .profile__avatar {
