--- a/public/stylus/profile.styl
+++ b/public/stylus/profile.styl
@@ -39,6 +39,8 @@ str(x)
 	&__elements
 		background white
 		border-top solid 1px #ddd
+		min-height 200px
+		overflow hidden
 	&__element
 		display none
 		max-width max-width
@@ -63,6 +65,13 @@ str(x)
 
 .empty
 	display none
+	text-align center
+	color #aaa
+	margin 3rem 1rem
+	font-family 'Raleway'
+	font-family 'Roboto Condensed'
+	text-transform uppercase
+	font-size 1.5rem
 
 @media (min-width: tablet)
 	.profile
