--- a/app/views/partials/profile.html
+++ b/app/views/partials/profile.html
@@ -54,7 +54,11 @@
 			<div class="empty">Esta seccion esta vacia</div>
 		</div>
 		<div class="profile__element"></div>
-		<div class="profile__element"></div>
+		<div class="profile__element">
+			<section class="products"></section>
+			<div class="loading"><i class="fa fa-spinner"></i></div>
+			<div class="empty">Esta seccion esta vacia</div>
+		</div>
 		<div class="profile__element"></div>
 		<div class="profile__element">
 			<section class="users"></section>
