--- a/public/stylus/profile.styl
+++ b/public/stylus/profile.styl
@@ -36,6 +36,8 @@ str(x)
 			align-items center
 			.skinny-text
 				padding-right 1rem
+	// &__menu
+	// 	padding .5rem 0
 	&__elements
 		background white
 		border-top solid 1px #ddd
