--- a/app/views/partials/profile.html
+++ b/app/views/partials/profile.html
@@ -46,29 +46,29 @@
 		<div class="profile__element">
 			<section class="works" data-columns></section>
 			<div class="loading"><i class="fa fa-spinner"></i></div>
-			<div class="empty">Esta seccion esta vacia</div>
+			<div class="empty">No tienes obras</div>
 		</div>
 		<div class="profile__element">
 			<section class="products"></section>
 			<div class="loading"><i class="fa fa-spinner"></i></div>
-			<div class="empty">Esta seccion esta vacia</div>
+			<div class="empty">No tine productos</div>
 		</div>
 		<div class="profile__element"></div>
 		<div class="profile__element">
 			<section class="products"></section>
 			<div class="loading"><i class="fa fa-spinner"></i></div>
-			<div class="empty">Esta seccion esta vacia</div>
+			<div class="empty">No tienes productos favoritos</div>
 		</div>
 		<div class="profile__element"></div>
 		<div class="profile__element">
 			<section class="users"></section>
 			<div class="loading"><i class="fa fa-spinner"></i></div>
-			<div class="empty">Esta seccion esta vacia</div>
+			<div class="empty">No tienes seguidores</div>
 		</div>
 		<div class="profile__element">
 			<section class="users"></section>
 			<div class="loading"><i class="fa fa-spinner"></i></div>
-			<div class="empty">Esta seccion esta vacia</div>
+			<div class="empty">No siguie a ningun artista</div>
 		</div>
 	</div>
 </section>
