--- a/public/css/profile.css
+++ b/public/css/profile.css
@@ -260,6 +260,8 @@ input[type="submit"] {
   }
 }
 .square-menu-container {
+  height: 3.5rem;
+  overflow: hidden;
   max-width: 1100px;
   margin: auto;
 }
@@ -267,16 +269,14 @@ input[type="submit"] {
   letter-spacing: 1.5px;
   font-family: 'Oswald';
   color: #585858;
-  display: -webkit-box;
-  display: -moz-box;
-  display: -webkit-flex;
-  display: -ms-flexbox;
-  display: box;
-  display: flex;
-  margin: 0 1rem;
   font-size: 0.9rem;
+  white-space: nowrap;
+  overflow-x: auto;
+  overflow-y: hidden;
+  margin: 0 1rem;
 }
 .square-menu__item {
+  display: inline-block;
   border: solid 1px #ddd;
   padding: 0.5rem 0.75rem;
   margin: 0.5rem 0;
@@ -289,15 +289,6 @@ input[type="submit"] {
 }
 .square-menu__item:not(:last-child) {
   margin-right: 0.5rem;
-}
-.square-menu__item .square {
-  position: absolute;
-  background: #fff;
-  width: 100%;
-  bottom: -0.51rem;
-  left: 0;
-  height: 1rem;
-  border: solid 1px #fff;
 }
 .header {
   display: -webkit-box;
