new margin to loading

--- a/public/css/profile.css
+++ b/public/css/profile.css
@@ -1246,7 +1246,7 @@ body {
   text-align: center;
   font-size: 1.5rem;
   color: #aaa;
-  margin: 1rem;
+  margin: 3rem 1rem;
   display: none;
 }
 .loading .fa {
