--- a/public/stylus/profile.styl
+++ b/public/stylus/profile.styl
@@ -36,8 +36,6 @@ str(x)
 			align-items center
 			.skinny-text
 				padding-right 1rem
-	// &__menu
-	// 	padding .5rem 0
 	&__elements
 		background white
 		border-top solid 1px #ddd
@@ -52,7 +50,7 @@ str(x)
 	text-align center
 	font-size 1.5rem
 	color #aaa
-	margin 1rem
+	margin 3rem 1rem
 	display none
 	.fa
 		animation 1.5s circle infinite
