--- a/app/views/partials/profile.html
+++ b/app/views/partials/profile.html
@@ -53,13 +53,20 @@
 			<div class="loading"><i class="fa fa-spinner"></i></div>
 			<div class="empty">No tine productos</div>
 		</div>
-		<div class="profile__element"></div>
+		<div class="profile__element">
+			
+		</div>
 		<div class="profile__element">
 			<section class="products"></section>
 			<div class="loading"><i class="fa fa-spinner"></i></div>
 			<div class="empty">No tienes productos favoritos</div>
 		</div>
-		<div class="profile__element"></div>
+		<div class="profile__element">
+			<section class="collections"></section>
+			<div class="loading"><i class="fa fa-spinner"></i></div>
+			<div class="empty">No tienes coleciones</div>
+		</div>
+		</div>
 		<div class="profile__element">
 			<section class="users"></section>
 			<div class="loading"><i class="fa fa-spinner"></i></div>
