--- a/public/css/profile.css
+++ b/public/css/profile.css
@@ -1185,6 +1185,146 @@ body {
     max-width: 33.333%;
   }
 }
+.collections {
+  margin: 0.5rem;
+  display: -webkit-box;
+  display: -moz-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: box;
+  display: flex;
+  -webkit-box-lines: multiple;
+  -moz-box-lines: multiple;
+  -o-box-lines: multiple;
+  -webkit-flex-wrap: wrap;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap;
+}
+.collections .collection-wrapper {
+  padding: 0.5rem;
+}
+.collection {
+  border: 1px solid #ddd;
+  -webkit-transition: box-shadow ease-in-out 125ms;
+  -moz-transition: box-shadow ease-in-out 125ms;
+  -o-transition: box-shadow ease-in-out 125ms;
+  -ms-transition: box-shadow ease-in-out 125ms;
+  transition: box-shadow ease-in-out 125ms;
+  padding: 0.5rem;
+}
+.collection__images {
+  display: -webkit-box;
+  display: -moz-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: box;
+  display: flex;
+}
+.collection__images .column:first-child {
+  -webkit-box-flex: 2;
+  -moz-box-flex: 2;
+  -o-box-flex: 2;
+  box-flex: 2;
+  -webkit-flex: 2;
+  -ms-flex: 2;
+  flex: 2;
+}
+.collection__images .column:nth-child(2) {
+  -webkit-box-flex: 1;
+  -moz-box-flex: 1;
+  -o-box-flex: 1;
+  box-flex: 1;
+  -webkit-flex: 1;
+  -ms-flex: 1;
+  flex: 1;
+}
+.collection__products {
+  color: #777;
+  text-align: center;
+  font-family: 'Roboto Condensed';
+  letter-spacing: 0.5px;
+  font-size: 0.9rem;
+}
+.collection__name {
+  color: #222;
+  font-family: 'Oswald';
+  letter-spacing: 0.5px;
+}
+.collection__user {
+  color: #777;
+  font-family: 'Roboto Condensed';
+  letter-spacing: 0.5px;
+  font-size: 0.95rem;
+}
+.collection__description {
+  color: #777;
+  font-family: 'Roboto Condensed';
+  font-size: 0.95rem;
+  margin-top: 0.5rem;
+  letter-spacing: 0.25px;
+}
+@media screen and (min-width: 400px) {
+  .collections {
+    display: -webkit-box;
+    display: -moz-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: box;
+    display: flex;
+    -webkit-box-lines: multiple;
+    -moz-box-lines: multiple;
+    -o-box-lines: multiple;
+    -webkit-flex-wrap: wrap;
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap;
+  }
+  .collections .collection-wrapper {
+    -webkit-box-flex: 1;
+    -moz-box-flex: 1;
+    -o-box-flex: 1;
+    box-flex: 1;
+    -webkit-flex: 1 50%;
+    -ms-flex: 1 50%;
+    flex: 1 50%;
+    max-width: 50%;
+  }
+}
+@media screen and (min-width: 600px) {
+  .collections .collection-wrapper {
+    -webkit-box-flex: 1;
+    -moz-box-flex: 1;
+    -o-box-flex: 1;
+    box-flex: 1;
+    -webkit-flex: 1 33.333%;
+    -ms-flex: 1 33.333%;
+    flex: 1 33.333%;
+    max-width: 33.333%;
+  }
+}
+@media screen and (min-width: 800px) {
+  .collections .collection-wrapper {
+    -webkit-box-flex: 1;
+    -moz-box-flex: 1;
+    -o-box-flex: 1;
+    box-flex: 1;
+    -webkit-flex: 1 25%;
+    -ms-flex: 1 25%;
+    flex: 1 25%;
+    max-width: 25%;
+  }
+}
+@media screen and (min-width: 1000px) {
+  .collections .collection-wrapper {
+    -webkit-box-flex: 1;
+    -moz-box-flex: 1;
+    -o-box-flex: 1;
+    box-flex: 1;
+    -webkit-flex: 1 20%;
+    -ms-flex: 1 20%;
+    flex: 1 20%;
+    max-width: 20%;
+  }
+}
 .profile {
   background: #f6f6f6;
   overflow: hidden;
