--- a/public/stylus/profile.styl
+++ b/public/stylus/profile.styl
@@ -14,6 +14,7 @@ str(x)
 @import 'objects/works.styl'
 @import 'objects/products.styl'
 @import 'objects/users.styl'
+@import 'objects/collections.styl'
 
 
 .profile
