--- a/public/css/profile.css
+++ b/public/css/profile.css
@@ -1220,7 +1220,10 @@ body {
   display: box;
   display: flex;
 }
-.collection__images .column:first-child {
+.collection__images .imageColumn {
+  height: 12rem;
+}
+.collection__images .imageColumn:first-child {
   -webkit-box-flex: 2;
   -moz-box-flex: 2;
   -o-box-flex: 2;
@@ -1229,7 +1232,7 @@ body {
   -ms-flex: 2;
   flex: 2;
 }
-.collection__images .column:nth-child(2) {
+.collection__images .imageColumn:nth-child(2) {
   -webkit-box-flex: 1;
   -moz-box-flex: 1;
   -o-box-flex: 1;
@@ -1238,12 +1241,19 @@ body {
   -ms-flex: 1;
   flex: 1;
 }
+.collection__images .imageColumn .image-container {
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  background-size: cover;
+  background-position: center center;
+}
 .collection__products {
   color: #777;
   text-align: center;
   font-family: 'Roboto Condensed';
   letter-spacing: 0.5px;
   font-size: 0.9rem;
+  margin-top: 0.5rem;
 }
 .collection__name {
   color: #222;
