--- a/public/stylus/objects/collections.styl
+++ b/public/stylus/objects/collections.styl
@@ -14,18 +14,22 @@
 	padding .5rem
 	&__images
 		display flex
-		.column
+		.imageColumn
+			height 12rem
 			&:first-child
 				flex 2
 			&:nth-child(2)
 				flex 1
-
+			.image-container
+				background-size cover
+				background-position center center
 	&__products
 		color #777
 		text-align center
 		font-family 'Roboto Condensed'
 		letter-spacing .5px
 		font-size .9rem
+		margin-top .5rem
 	&__name
 		color #222
 		font-family 'Oswald'
