set url in profile

--- a/app/views/pages/works.html
+++ b/app/views/pages/works.html
@@ -11,7 +11,9 @@
 
 	<script type="text/template" id="template">
 		<article class="work">
-			<img src="<%= photo %>">
+			<a href="<%= url %>">
+				<img src="<%= photo %>">
+			</a>
 		</article>
 	</script>
 
