--- a/app/views/partials/works.html
+++ b/app/views/partials/works.html
@@ -4,7 +4,9 @@
 <section class="works" data-columns>
 	{% for work in works %}
 		<article class="work" data-index="{{ loop.index }}">
-			<img src="{{ work.photo }}">
+			<a href="{{ work.url }}">
+				<img src="{{ work.photo }}">
+			</a>
 		</article>
 	{% endfor %}
 </section>
