pagination in profile

--- a/app/views/partials/profile.html
+++ b/app/views/partials/profile.html
@@ -46,7 +46,7 @@
 		<div class="profile__element">
 			<section class="works" data-columns></section>
 			<div class="loading"><i class="fa fa-spinner"></i></div>
-			<div class="empty">No tienes obras</div>
+			<div class="empty">No tiene obras</div>
 		</div>
 		<div class="profile__element">
 			<section class="products"></section>
@@ -54,27 +54,32 @@
 			<div class="empty">No tine productos</div>
 		</div>
 		<div class="profile__element">
-			
+			<section class="works"></section>
+			<div class="loading"><i class="fa fa-spinner"></i></div>
+			<div class="empty">No tine obras favoritas</div>
 		</div>
 		<div class="profile__element">
 			<section class="products"></section>
 			<div class="loading"><i class="fa fa-spinner"></i></div>
-			<div class="empty">No tienes productos favoritos</div>
+			<div class="empty">No tiene productos favoritos</div>
 		</div>
 		<div class="profile__element">
 			<section class="collections"></section>
 			<div class="loading"><i class="fa fa-spinner"></i></div>
-			<div class="empty">No tienes coleciones</div>
+			<div class="empty">No tiene coleciones</div>
 		</div>
 		<div class="profile__element">
 			<section class="users"></section>
 			<div class="loading"><i class="fa fa-spinner"></i></div>
-			<div class="empty">No tienes seguidores</div>
+			<div class="empty">No tiene seguidores</div>
 		</div>
 		<div class="profile__element">
 			<section class="users"></section>
 			<div class="loading"><i class="fa fa-spinner"></i></div>
 			<div class="empty">No siguie a ningun artista</div>
 		</div>
+	</div>
+	<div class="more hidden">
+		<button class="button-solid" data-color='red'>Ver más</button>
 	</div>
 </section>
