--- a/app/views/user/index.html
+++ b/app/views/user/index.html
@@ -136,7 +136,7 @@
 		console.log('data: ', data);
 
 		var currentPath = {{ currentPath|json|safe }};
-		console.log('path: ', currentPath);
+		console.log('currentPath: ', currentPath);
 
 		var owner = {{ owner|json|safe }};
 		console.log('owner: ', owner);
