--- a/public/stylus/profile.styl
+++ b/public/stylus/profile.styl
@@ -55,6 +55,13 @@ str(x)
 	display none
 	.fa
 		animation 1.5s circle infinite
+		
+.more
+	padding 1rem 0
+	text-align center
+	background white
+	&.hidden
+		display none
 			
 @keyframes circle
 	0%
