add collections and refactor work model

--- a/app/views/user/account/password.html
+++ b/app/views/user/account/password.html
@@ -5,11 +5,14 @@
 {% set css = 'index' %}
 
 {% block elements %}
-
+<form method="post">
+    <input type="password" name="password" placeholder="contraseña"/><br/>
+    <input type="password" name="repassword" placeholder="recontraseña"/><br/>
+    <input type="submit"/>
+</form>
 {% endblock %}
 
 {% block scripts %}
-
 <script type="text/javascript">
     console.log('index!')
     var successMessage = {{ successMessage|json|safe }}
