--- a/app/views/user/index.html
+++ b/app/views/user/index.html
@@ -14,9 +14,10 @@
 	
 	<script type="text/template" id="work-template">
 		<article class="work">
-			<a href="<%= url %>">
-				<img src="<%= photo %>">
-			</a>
+			<img src="<%= photo %>">
+			<div class="cover">
+
+			</div>
 		</article>
 	</script>
 
@@ -155,6 +156,7 @@
 	
 	<script type="text/javascript" src="/js/lib/user.js"></script>
 	<script type="text/javascript" src="/js/lib/product.js"></script>
+	<script type="text/javascript" src="/js/lib/work.js"></script>
 	
 	<script type="text/javascript" src="/js/profile.js"></script>
 
