--- a/app/views/partials/profile.html
+++ b/app/views/partials/profile.html
@@ -54,7 +54,7 @@
 			<div class="empty">No tine productos</div>
 		</div>
 		<div class="profile__element">
-			<section class="works"></section>
+			<section class="works" data-columns></section>
 			<div class="loading"><i class="fa fa-spinner"></i></div>
 			<div class="empty">No tine obras favoritas</div>
 		</div>
