--- a/app/views/partials/works.html
+++ b/app/views/partials/works.html
@@ -4,9 +4,18 @@
 <section class="works" data-columns>
 	{% for work in works %}
 		<article class="work" data-index="{{ loop.index }}">
-			<a href="{{ work.url }}">
-				<img src="{{ work.photo }}">
-			</a>
+			<img src="{{ work.photo }}">
+			<div class="cover">
+				{% if work.liked %}
+					<div class="social-item active">
+						<i class="fa fa-heart"></i>
+					</div>
+				{% else %}
+					<div class="social-item">
+						<i class="fa fa-heart"></i>
+					</div>
+				{% endif %}
+			</div>
 		</article>
 	{% endfor %}
 </section>
